[project]
name = "uw-hass"
version = "0.2.1"
description = "Utility Warehouse custom integration for Home Assistant"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "live: marks tests that require live API credentials",
]
pythonpath = ["."]
addopts = "-m 'not live' --tb=short --import-mode=importlib"

[tool.coverage.run]
source = ["custom_components/utility_warehouse"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "UP", "B", "SIM",
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
check_untyped_defs = true
files = ["custom_components/utility_warehouse"]
